--- a/pipelines/incubator/events/deploy-kustomize-task.yaml
+++ b/pipelines/incubator/events/deploy-kustomize-task.yaml
@@ -16,6 +16,7 @@ spec:
         #!/usr/bin/env sh
         
         # First check if a dryrun is successful
+        echo "[INFO] Starting dry run..."
         kubectl apply -k /workspace/git-source/env --dry-run=server
         
         if [ $? != 0 ]; then
@@ -25,13 +26,17 @@ spec:
 
         # If it's good then run
         echo "[INFO] Starting deployment..."
-        kubectl apply -k /workspace/git-source/environments
+        kubectl apply -k /workspace/git-source/env
+        if [ $? != 0 ]; then
+          echo "[ERROR] Deployment was unsuccessful. Please review errors above for more details. Service was not deployed."
+          exit 1
+        fi
+
+        # TODO: To support newer kustomize we should be doing
+        # kustomize build /workspace/git-source/env | kubectl apply -k -
 
         # TODO: The pipeline declares success if apply is successful.  It takes a minute or so after we apply for the app pod to come up.
-        # Maybe we should wait and try to check for status of app?.
-
-        # TODO: To support newer kustomize 
-        # kustomize build /workspace/git-source/env | kubectl apply -k -
+        # Maybe we should wait and try to check for status of app?
     env:
     - name: gitsource
       value: git-source
