--- a/pipelines/incubator/events/build-task.yaml
+++ b/pipelines/incubator/events/build-task.yaml
@@ -1,4 +1,7 @@
 #Kabanero! on activate substitute Digest for text '@Digest@'
+#
+# This task will build the source in the git-source repo and create a local image specified in the docker-image resource.
+#
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
@@ -8,20 +11,19 @@ spec:
     inputs:
     - name: git-source
       type: git
-    - name: docker-image
-      type: image
     outputs:
     - name: docker-image
       type: image
   params:
   - name: docker-imagename
     type: string
-    default: ""
   - name: docker-imagetag
     type: string
-    default: ""
+  steps:
   steps:
   - name: enforce-stack-policy-pre-build
+    # This step enforces the pre build stack governance policy configured in the Kabanero CR.
+    # Refer to https://kabanero.io/docs/ref/general/reference/semver-governance.html for policy details.
     securityContext:
       privileged: true
     image: kabanero/kabanero-utils:0.9.0
@@ -35,55 +37,61 @@ spec:
       value: git-source
     volumeMounts:
     - mountPath: /var/lib/containers
-      name: varlibcontainers
+      name: varlibcontainers     
   - name: build
+    # This steps builds the source project using appsody build.
     securityContext:
       privileged: true
     image: kabanero/kabanero-utils:0.9.0
+    imagePullPolicy: Always
     command: ["/bin/bash"]
     args:
       - -c
       - |
-        # The following scripts are used to setup secure or insecure access to the image registry based on the configuration 
-        # of the image.config.openshift.io/cluster resource.
-
-        # Executing the insecure_registry_setup.sh script to add internal registry to insecure registry list
-        if [ -f "/scripts/insecure_registry_setup.sh" ]; then
-           echo "Running the script /scripts/insecure_registry_setup.sh ...."
-           /scripts/insecure_registry_setup.sh
-        else
-           echo 'Unable to find insecure_registry_setup.sh'
-           exit 1
-        fi
-
-        # Executing the ca_certs_setup.sh script to add additional trusted ca certs to /etc/docker/certs.d/<hosname>/ca.crt
-        if [ -f "/scripts/ca_certs_setup.sh" ]; then
-           echo "Running the script /scripts/ca_certs_setup.sh ...."
-           /scripts/ca_certs_setup.sh
-        else
-           echo 'Unable to find insecure_registry_setup.sh'
-           exit 1
-        fi
- 
-        # Lowercase the image name to honor the docker rule that you can't have upper case image names
-        OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /scripts/imageurl_imagename_lowercase.sh -u $(inputs.resources.docker-image.url) -n $(inputs.params.docker-imagename) -t $(inputs.params.docker-imagetag) )
+        # Configure image registry access in the container by adding it to the insecure registry list or enabling TLS verification
+        # by adding it to the trust store based on OpenShift cluster resource configuration.
+        echo "[INFO] Running the script /scripts/image_registry_access_setup.sh ...."
+        /scripts/image_registry_access_setup.sh
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "The script failed(/scripts/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+           echo "[ERROR] The script failed(/scripts/image_registry_access_setup.sh)" >&2
+           exit $retVal
+        fi
+        echo "[INFO] Completed setup for image registry access."
+
+        # If the image registry URL of the stack image is the external route of the internal registry, change the stack regisry URL to the 
+        # internal route.  This avoids having to configure additional secrets, certificates etc.
+        OUTPUTS_STACK_IMAGE_REGISTRY_URL=$( /scripts/stack_registry_url_setup.sh )
+        retVal=$?
+        if [ $retVal -ne 0 ]
+        then
+           echo "[ERROR] The script failed(/scripts/stack_registry_url_setup.sh) Reason: $OUTPUTS_STACK_IMAGE_REGISTRY_URL" >&2
            exit $retVal
         fi
 
-        echo "Image registry URL = $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
-        
-        # Run appsody build to build the source project
-        cd /workspace/$gitsource
-        appsody build -t "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" --buildah --buildah-options "--format=docker"
 
+        echo "[INFO] Stack registry URL = $OUTPUTS_STACK_IMAGE_REGISTRY_URL"
+        # Docker does not support upper case characters in the image name.  Github does not have this restriction.
+        # So lowercase the image name if it has any upper case characters.
+        OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /scripts/imageurl_imagename_lowercase.sh -u $(outputs.resources.docker-image.url) -n $(inputs.params.docker-imagename) -t $(inputs.params.docker-imagetag) )
+        retVal=$?
+        if [ $retVal -ne 0 ]
+        then
+           echo "[ERROR] The script failed(/scripts/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+           exit $retVal
+        fi
+
+        echo "[INFO] Application image URL = $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+
+        cd /workspace/$gitsource
+        echo "[INFO] Running appsody build..."
+        appsody build -t "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" --buildah --buildah-options "--format=docker" --stack-registry "$OUTPUTS_STACK_IMAGE_REGISTRY_URL"
         if [ $? != 0 ]; then
-            echo "Appsody build failed.  Please review the appsody build logs above.  Pipeline run aborted."
+            echo "[ERROR] Appsody build failed.  Please review the appsody build logs above.  Pipeline run aborted."
             exit 1
         fi
+        echo "[INFO] Completed appsody build."
     env:
     - name: gitsource
       value: git-source
@@ -91,6 +99,8 @@ spec:
     - mountPath: /var/lib/containers
       name: varlibcontainers
   - name: enforce-stack-policy-post-build
+    # This step enforces the post build stack governance policy configured in the Kabanero CR.
+    # Refer to https://kabanero.io/docs/ref/general/reference/semver-governance.html for policy details.
     securityContext:
       privileged: true
     image: kabanero/kabanero-utils:0.9.0
@@ -104,7 +114,7 @@ spec:
       value: git-source
     volumeMounts:
     - mountPath: /var/lib/containers
-      name: varlibcontainers
+      name: varlibcontainers   
   volumes:
   - name: varlibcontainers
     emptyDir: {}
